EstudoGeometrico.cs: inclusão do método EmiteEstudoDePerimetro.
Inclusão da interface ICapazDeCalcularPerimetro.cs no projeto.

Program.cs: chamada do método EmiteEstudoPerimetro

Quadrado.cs: implementa interface ICapazDeCalcularPerimetro

--- a/CSharp.Geometria.ConsoleApp/CSharp.Geometria.ConsoleApp.csproj
+++ b/CSharp.Geometria.ConsoleApp/CSharp.Geometria.ConsoleApp.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Elipse.cs" />
     <Compile Include="EstudoGeometrico.cs" />
     <Compile Include="Figura2D.cs" />
+    <Compile Include="ICapazDeCalcularPerimetro.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quadrado.cs" />
